font & align & color modified

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/public/metalogo.svg"/> 
+    <link rel="apple-touch-icon" href="/public/metalogo.svg"/> 
     <title>조선타자기</title>
   </head>
   <body>
